--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  grzankowski2018nonpropositional,
+  address	= {Oxford, United Kingdom},
+  editor	= {Grzankowski, Alex and Montague, Michelle},
+  publisher	= {Oxford University Press},
+  title		= {Non-Propositional Intentionality},
+  year		= {2018}
+}
+
 @Article{	  larson2017revisiting,
   author	= {Larson, Richard and LaTerza, Ivana},
   journal	= {Revista Lingu\'iʃtica},
