--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  coon2025embedding,
+  author	= {Coon, Jessica and {\'A}lvarez V{\'a}zquez, Juan Jes{\'u}s},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Embedding, Extraction, and Clausal Pied-Piping in Ch'ol},
+  volume	= {10},
+  year		= {2025}
+}
+
 @Book{		  grzankowski2018nonpropositional,
   address	= {Oxford, United Kingdom},
   editor	= {Grzankowski, Alex and Montague, Michelle},
