--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  banfield1973narrative,
+  author	= {Banfield, Ann},
+  journal	= {Foundations of Language},
+  number	= {1},
+  pages		= {1--39},
+  title		= {Narrative Style and the Grammar of Direct and Indirect
+		  Speech},
+  volume	= {10},
+  year		= {1973}
+}
+
 @Article{	  coon2025embedding,
   author	= {Coon, Jessica and {\'A}lvarez V{\'a}zquez, Juan Jes{\'u}s},
   journal	= {Glossa: a journal of general linguistics},
