--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  koev2025adverbs,
+  author	= {Koev, Todor},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Adverbs of Change and Dynamicity},
+  year		= {2025}
+}
+
 @Article{	  banfield1973narrative,
   author	= {Banfield, Ann},
   journal	= {Foundations of Language},
