--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  axel-tober2025syntactic,
+  author	= {Axel-Tober, Katrin and M{\"u}ller, Kalle},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {A Syntactic Approach to Pragmaticalization},
+  volume	= {10},
+  year		= {2025}
+}
+
 @Article{	  koev2025adverbs,
   author	= {Koev, Todor},
   journal	= {Natural Language and Linguistic Theory},
