--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  bondarenko2025leftover,
+  author	= {Bondarenko, Tatiana and Zomp{\`\i}, Stanislao},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Leftover Agreement},
+  year		= {2025}
+}
+
 @Article{	  axel-tober2025syntactic,
   author	= {Axel-Tober, Katrin and M{\"u}ller, Kalle},
   journal	= {Glossa: a journal of general linguistics},
