--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,67 @@
 
+@Article{	  nie2025turkish,
+  author	= {Nie, Yining},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {401--414},
+  title		= {Turkish Causatives Are Recursive: A Response to Key 2013},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  anand2025domain,
+  author	= {Anand, Pranav and Hardt, Daniel and McCloskey, James},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {353--373},
+  title		= {The Domain of Formal Matching in Sluicing},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  caponigro2025still,
+  author	= {Caponigro, Ivano},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {374--400},
+  title		= {Still Free to Have a Wh-Phrase: A Reply to Donati,
+		  Foppolo, Konrad, and Cecchetto 2022},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  topintzi2025reconciling,
+  author	= {Topintzi, Nina and Zimmermann, Eva},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {311--351},
+  title		= {Reconciling ''Heavy and ''Long: The Typology of Lexical
+		  Geminates},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  royer2025binding,
+  author	= {Royer, Justin},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {247--310},
+  title		= {Binding and Anticataphora in Mayan},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  philipp2025experimental,
+  author	= {Philipp, Mareike and Zimmermann, Malte},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {209--245},
+  title		= {An Experimental Comparison of the Availability of Inverse
+		  Scope in English and German},
+  volume	= {56},
+  year		= {2025}
+}
+
 @Article{	  bondarenko2025leftover,
   author	= {Bondarenko, Tatiana and Zomp{\`\i}, Stanislao},
   journal	= {Natural Language and Linguistic Theory},
