--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,69 @@
 
+@Article{	  deal2025mayan,
+  author	= {Deal, Amy Rose and Royer, Justin},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Mayan Animacy Hierarchy Effects and the Dynamics of
+		  Agree},
+  year		= {2025}
+}
+
+@Article{	  deal2024clausal,
+  author	= {Deal, Amy Rose},
+  title		= {Clausal Complementation as Relativization, Revisited},
+  year		= {2024}
+}
+
+@Article{	  musan1997tense,
+  author	= {Musan, Renate},
+  journal	= {Natural Language Semantics},
+  number	= {3},
+  pages		= {271--301},
+  title		= {Tense, Predicates, and Lifetime Effects},
+  volume	= {5},
+  year		= {1997}
+}
+
+@Article{	  musan1999temporal,
+  author	= {Musan, Renate},
+  journal	= {Linguistics and Philosophy},
+  number	= {6},
+  pages		= {621--661},
+  title		= {Temporal Interpretation and Information-Status of Noun
+		  Phrases},
+  volume	= {22},
+  year		= {1999}
+}
+
+@Article{	  enc1986referentiala,
+  author	= {En{\c c}, M{\"u}rvet},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {405--426},
+  title		= {Towards a Referential Analysis of Temporal Expressions},
+  volume	= {9},
+  year		= {1986}
+}
+
+@Article{	  enc1987anchoringa,
+  author	= {En{\c c}, M{\"u}rvet},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {633--657},
+  title		= {Anchoring Conditions for Tense},
+  volume	= {18},
+  year		= {1987}
+}
+
+@Article{	  ritter2014compositiona,
+  author	= {Ritter, Elizabeth and Wiltschko, Martina},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {4},
+  pages		= {1331--1386},
+  title		= {The Composition of {INFL}},
+  volume	= {32},
+  year		= {2014}
+}
+
 @Article{	  nie2025turkish,
   author	= {Nie, Yining},
   journal	= {Linguistic Inquiry},
