--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@Article{	  bowers2023deepa,
+  author	= {Bowers, Jeffrey S. and Malhotra, Gaurav and Dujmovi{\'c},
+		  Marin and Llera Montero, Milton and Tsvetkov, Christian and
+		  Biscione, Valerio and Puebla, Guillermo and Adolfi,
+		  Federico and Hummel, John E. and Heaton, Rachel F. and
+		  Evans, Benjamin D. and Mitchell, Jeffrey and Blything,
+		  Ryan},
+  journal	= {Behavioral and Brain Sciences},
+  pages		= {e385},
+  title		= {Deep Problems with Neural Network Models of Human Vision},
+  volume	= {46},
+  year		= {2023}
+}
+
 @Article{	  deal2025mayan,
   author	= {Deal, Amy Rose and Royer, Justin},
   journal	= {Natural Language and Linguistic Theory},
