--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@Article{	  middleton2025predicatesluicing,
+  author	= {Middleton, John},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Predicate-Sluicing in Tokelauan},
+  year		= {2025}
+}
+
+@Article{	  maeda2024bare,
+  author	= {Maeda, Masako and Miyamoto, Yoichi},
+  journal	= {Journal of East Asian Linguistics},
+  number	= {4},
+  pages		= {533--557},
+  title		= {Bare Wh-stripping in Japanese},
+  volume	= {33},
+  year		= {2024}
+}
+
+@Article{	  djarv2021syntaxa,
+  author	= {Dj{\"a}rv, Kajsa},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {1},
+  pages		= {49--88},
+  title		= {The Syntax and Semantics of Swedish Copular Sentences: A
+		  Comparative Perspective},
+  volume	= {24},
+  year		= {2021}
+}
+
 @Article{	  bowers2023deepa,
   author	= {Bowers, Jeffrey S. and Malhotra, Gaurav and Dujmovi{\'c},
 		  Marin and Llera Montero, Milton and Tsvetkov, Christian and
