--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,27 @@
 
+@Article{	  kushnir2025variable,
+  author	= {Kushnir, Yuriy},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The Variable Position of the Reflexive Affix in
+		  Lithuanian},
+  year		= {2025}
+}
+
+@Article{	  li2025reference,
+  author	= {Li, Haoze},
+  journal	= {Linguistics and Philosophy},
+  title		= {Reference to the Dependency in a Multiple-Wh Question},
+  year		= {2025}
+}
+
+@Article{	  zimmermann2025one,
+  author	= {Zimmermann, Malte and Amaechi, Mary},
+  journal	= {Linguistics and Philosophy},
+  title		= {One, but Not the Same: On Complex Event-Formation in Igbo
+		  Serial Verb Constructions},
+  year		= {2025}
+}
+
 @Article{	  middleton2025predicatesluicing,
   author	= {Middleton, John},
   journal	= {Natural Language and Linguistic Theory},
