--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  collins2002multiple,
+  author	= {Collins, Chris},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--29},
+  title		= {Multiple Verb Movement in $\neq$ Hoan},
+  volume	= {33},
+  year		= {2002}
+}
+
 @Article{	  kushnir2025variable,
   author	= {Kushnir, Yuriy},
   journal	= {Natural Language and Linguistic Theory},
