--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  keine2025clauseinternal,
+  author	= {Keine, Stefan and Zeijlstra, Hedde},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Clause-Internal Successive Cyclicity: Phasality or {DP}
+		  Intervention?},
+  year		= {2025}
+}
+
+@Article{	  owusu2025strong,
+  author	= {Owusu, Augustina P.},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {On the Strong--Weak Status of the Akan Definiteness
+		  Marker},
+  year		= {2025}
+}
+
 @Article{	  collins2002multiple,
   author	= {Collins, Chris},
   journal	= {Linguistic Inquiry},
