--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  salzmann2012derivational,
+  author	= {Salzmann, Martin},
+  journal	= {The Linguistic Review},
+  number	= {3},
+  title		= {A Derivational Ellipsis Approach to {ATB}-movement},
+  volume	= {29},
+  year		= {2012}
+}
+
 @Article{	  keine2025clauseinternal,
   author	= {Keine, Stefan and Zeijlstra, Hedde},
   journal	= {Natural Language and Linguistic Theory},
