--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,65 @@
 
+@Article{	  lasnik2003eppa,
+  author	= {Lasnik, Howard and Park, Myung-Kwan},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {649--660},
+  title		= {The {EPP} and the Subject Condition under Sluicing},
+  volume	= {34},
+  year		= {2003}
+}
+
+@Article{	  boskovic2003distribution,
+  author	= {Bo{\v s}kovi{\'c}, {\v Z}eljko and Lasnik, Howard},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {527--546},
+  title		= {On the Distribution of Null Complementizers},
+  volume	= {34},
+  year		= {2003}
+}
+
+@Article{	  lasnik2001notea,
+  author	= {Lasnik, Howard},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {356--362},
+  title		= {A Note on the {EPP}},
+  volume	= {32},
+  year		= {2001}
+}
+
+@Article{	  epstein2005epp,
+  author	= {Epstein, Samuel David and Pires, Acrisio and Seely, T.
+		  Daniel},
+  journal	= {Syntax},
+  number	= {1},
+  pages		= {65--80},
+  title		= {{EPP} in T: More Controversial Subjects.},
+  volume	= {8},
+  year		= {2005}
+}
+
+@Book{		  epstein2002derivation,
+  address	= {Hoboken},
+  editor	= {Epstein, Samuel David and Seely, T. Daniel},
+  publisher	= {John Wiley and Sons},
+  title		= {Derivation and Explanation in the Minimalist Program},
+  volume	= {(v.4)},
+  year		= {2002}
+}
+
+@InBook{	  torrego2002arguments,
+  author	= {Torrego, Esther},
+  booktitle	= {Derivation and Explanation in the Minimalist Program},
+  editor	= {Epstein, Samuel David and Seely, T. Daniel},
+  pages		= {249-268},
+  publisher	= {Wiley},
+  title		= {Arguments for a Derivational Approach to Syntactic
+		  Relations Based on Clitics},
+  year		= {2002}
+}
+
 @Article{	  salzmann2012derivational,
   author	= {Salzmann, Martin},
   journal	= {The Linguistic Review},
