--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Book{		  rae-asale2025nueva,
+  address	= {Madrid},
+  author	= {RAE-ASALE},
+  publisher	= {Planeta Libros. Espasa Calpe},
+  title		= {Nueva gram{\'a}tica de la lengua espa{\~n}ola.
+		  Morfolog{\'i}a y Sintaxis (I). Sintaxis ({II}).Sintaxis
+		  ({III})},
+  volume	= {I, II, III},
+  year		= {2025}
+}
+
 @Article{	  lasnik2003eppa,
   author	= {Lasnik, Howard and Park, Myung-Kwan},
   journal	= {Linguistic Inquiry},
