--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  dryer2018order,
+  author	= {Dryer, Matthew S.},
+  journal	= {Language},
+  number	= {4},
+  pages		= {798--833},
+  title		= {On the order of demonstrative, numeral, adjective, and
+		  noun},
+  volume	= {94},
+  year		= {2018}
+}
+
+@Article{	  hawkins1990parsing,
+  author	= {Hawkins, John},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {223--261},
+  title		= {A Parsing Theory of Word Order Universals},
+  volume	= {21},
+  year		= {1990}
+}
+
+@Article{	  cinque2005deriving,
+  author	= {Cinque, Guglielmo},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {315--332},
+  title		= {Deriving Greenberg Universal 20 and Its Exceptions},
+  volume	= {36},
+  year		= {2005}
+}
+
 @Book{		  rae-asale2025nueva,
   address	= {Madrid},
   author	= {RAE-ASALE},
