--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,64 @@
 
+@InBook{	  soare2025participial,
+  author	= {Soare, Elena},
+  booktitle	= {Oxford Research Encyclopedia of Linguistics},
+  editor	= {Aronoff, Maro},
+  title		= {Participial Clauses in the Romance Languages},
+  year		= {2025}
+}
+
+@InBook{	  cecchetto2023relative,
+  author	= {Cecchetto, Carlo and Donati, Caterina},
+  booktitle	= {Oxford Research Encyclopedia of Linguistics},
+  editor	= {Aronoff, Mark},
+  title		= {Relative Clauses in the Romance Languages},
+  year		= {2023}
+}
+
+@InBook{	  mensching2021infinitival,
+  author	= {Mensching, Guido},
+  booktitle	= {Oxford Research Encyclopedia of Linguistics},
+  editor	= {Aronoff, Mark},
+  title		= {Infinitival Clauses in the Romance Languages},
+  year		= {2021}
+}
+
+@InBook{	  vries2018relative,
+  author	= {de Vries, Mark},
+  booktitle	= {Oxford Research Encyclopedia of Linguistics},
+  editor	= {Aronoff, Mark},
+  title		= {Relative Clauses in Syntax},
+  year		= {2018}
+}
+
+@InBook{	  sleeman2017participial,
+  author	= {Sleeman, Petra},
+  booktitle	= {Oxford Research Encyclopedia of Linguistics},
+  editor	= {Aronoff, Mark},
+  title		= {Participial Relative Clauses},
+  year		= {2017}
+}
+
+@Article{	  angelopoulos2023syntactic,
+  author	= {Angelopoulos, Nikos and Collins, Chris and Michelioudakis,
+		  Dimitris and Terzi, Antonio},
+  journal	= {Proceedings of the 41st West Coast Conference on Formal
+		  Linguistics},
+  title		= {On the Syntactic Status of Implicit Arguments: Greek as a
+		  Case Study},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  finholt2023interpretive,
+  author	= {Finholt, Aron},
+  journal	= {Proceedings of the 41st West Coast Conference on Formal
+		  Linguistics},
+  title		= {Interpretive Contrasts in the Kifuliiru Copular System},
+  volume	= {41},
+  year		= {2023}
+}
+
 @Article{	  dryer2018order,
   author	= {Dryer, Matthew S.},
   journal	= {Language},
