--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,94 @@
 
+@Book{		  perezvazquez2007infinitivo,
+  address	= {Bologna},
+  author	= {P{\'e}rez V{\'a}zquez, Enriqueta P{\'e}rez},
+  publisher	= {Gedit Edizioni},
+  title		= {El infinitivo y su sujeto en espa{\~n}ol},
+  year		= {2007}
+}
+
+@Article{	  samek-lodovici2025corrective,
+  author	= {Samek-Lodovici, Vieri},
+  journal	= {Natural Language \\& Linguistic Theory},
+  title		= {On Corrective Questions and the Position of Focus},
+  year		= {2025}
+}
+
+@Book{		  partee1990mathematical,
+  address	= {Dordrecht},
+  author	= {Partee, Barbara Hall and ter Meulen, Alice G. B. and Wall,
+		  Robert Emmet},
+  publisher	= {Kluwer Academic Pub.},
+  title		= {Mathematical Methods in Linguistics},
+  year		= {1990}
+}
+
+@Book{		  dowty1979word,
+  address	= {Dordrecht},
+  author	= {Dowty, David R.},
+  publisher	= {Springer Netherlands},
+  title		= {Word Meaning and Montague Grammar},
+  volume	= {7},
+  year		= {1979}
+}
+
+@Book{		  pietroski2018conjoininga,
+  author	= {Pietroski, Paul M.},
+  publisher	= {Oxford University Press},
+  title		= {Conjoining Meanings: Semantics Without Truth Values},
+  year		= {2018}
+}
+
+@Book{		  lepore2025oxford,
+  editor	= {Lepore, Ernie and Stojni{\'c}, Una},
+  publisher	= {Oxford University Press},
+  title		= {The Oxford Handbook of Contemporary Philosophy of
+		  Language},
+  year		= {2025}
+}
+
+@Book{		  hinzen2012oxford,
+  editor	= {Hinzen, Wolfram and Machery, Edouard and Werning, Markus},
+  publisher	= {Oxford University Press},
+  title		= {The Oxford Handbook of Compositionality},
+  year		= {2012}
+}
+
+@Book{		  altshuler2019course,
+  address	= {Cambridge, MA},
+  author	= {Altshuler, Daniel},
+  pages		= {XVIII, 225 p. ;},
+  publisher	= {The MIT Press},
+  title		= {A Course in Semantics},
+  year		= {2019}
+}
+
+@Book{		  gillon2019natural,
+  address	= {Cambridge, Massachusetts},
+  author	= {Gillon, Brendan S.},
+  pages		= {XIII, 713 p. :},
+  publisher	= {The MIT Press},
+  title		= {Natural Language Semantics: Formation and Valuation},
+  year		= {2019}
+}
+
+@Book{		  escandellvidal2004fundamentos,
+  address	= {Barcelona},
+  author	= {Escandell-Vidal, M. Victoria},
+  publisher	= {Ariel},
+  title		= {Fundamentos de Sem{\'a}ntica Composicional},
+  year		= {2004}
+}
+
+@Book{		  chatzikyriakidis2025types,
+  author	= {Chatzikyriakidis, Stergios and Cooper, Robin and
+		  Gregoromichelaki, Eleni and Sutton, Peter},
+  publisher	= {Cambridge University Press},
+  title		= {Types and the Structure of Meaning: Issues in
+		  Compositional and Lexical Semantics},
+  year		= {2025}
+}
+
 @InBook{	  soare2025participial,
   author	= {Soare, Elena},
   booktitle	= {Oxford Research Encyclopedia of Linguistics},
