--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  cowart1997experimental,
+  address	= {Thousand Oaks, Calif},
+  author	= {Cowart, Wayne},
+  publisher	= {Sage Publications},
+  title		= {Experimental Syntax: Applying Objective Methods to
+		  Sentence Judgements},
+  year		= {1997}
+}
+
 @Book{		  perezvazquez2007infinitivo,
   address	= {Bologna},
   author	= {P{\'e}rez V{\'a}zquez, Enriqueta P{\'e}rez},
