--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  espinal2025experiencers,
+  author	= {Espinal, M. Teresa and Cyrino, Sonia},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Experiencers at the Syntax-Pragmatics Interface. The Case
+		  of the Jo `I' -- Construction in Catalan},
+  volume	= {10},
+  year		= {2025}
+}
+
+@InBook{	  silverstein1986hierarchy,
+  author	= {Silverstein, Michael},
+  pages		= {163-232},
+  publisher	= {De Gruyter Mouton},
+  title		= {Hierarchy of Features and Ergativity Features and
+		  Projections},
+  year		= {1986}
+}
+
 @Book{		  cowart1997experimental,
   address	= {Thousand Oaks, Calif},
   author	= {Cowart, Wayne},
