--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  tsilia2025hidden,
+  author	= {Tsilia, Anastasia},
+  journal	= {Natural Language Semantics},
+  title		= {Hidden Causality in Modern Greek},
+  year		= {2025}
+}
+
 @Article{	  espinal2025experiencers,
   author	= {Espinal, M. Teresa and Cyrino, Sonia},
   journal	= {Glossa: a journal of general linguistics},
