--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  forbes2025improve,
+  author	= {Forbes, Samuel H. and Guest, Olivia},
+  journal	= {Cognitive Science},
+  number	= {4},
+  pages		= {e70058},
+  title		= {To Improve Literacy, Improve Equality in Education, Not
+		  Large Language Models},
+  volume	= {49},
+  year		= {2025}
+}
+
+@Article{	  chen2025passivization,
+  author	= {Chen, Fulang},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Passivization and Composite A/\=A-movement in the Mandarin
+		  Bei-Construction},
+  year		= {2025}
+}
+
 @Article{	  tsilia2025hidden,
   author	= {Tsilia, Anastasia},
   journal	= {Natural Language Semantics},
