--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,105 @@
 
+@Book{		  elbourne2011meaning,
+  address	= {Boston, MA ; New York, NY},
+  author	= {Elbourne, Paul D.},
+  publisher	= {Oxford University Press},
+  title		= {Meaning: A Slim Guide to Semantics},
+  year		= {2011}
+}
+
+@Article{	  zuber2025more,
+  author	= {Zuber, Richard},
+  journal	= {Journal of Semantics},
+  number	= {1-2},
+  pages		= {57--74},
+  title		= {More on Semantic Restrictions on Certain Complementizers},
+  volume	= {42},
+  year		= {2025}
+}
+
+@Article{	  borg2025llms,
+  author	= {Borg, Emma},
+  journal	= {Inquiry},
+  pages		= {1--31},
+  title		= {{LLM}s, Turing Tests and Chinese Rooms: The Prospects for
+		  Meaning in Large Language Models},
+  year		= {2025}
+}
+
+@Article{	  deo2025addressing,
+  author	= {Deo, Ashwini and Thomas, William Carl},
+  journal	= {Journal of Semantics},
+  number	= {1-2},
+  pages		= {1--37},
+  title		= {Addressing the Widest Answerable Question: English ''Just
+		  as a Domain Widening Strategy},
+  volume	= {42},
+  year		= {2025}
+}
+
+@InBook{	  king2024structured,
+  author	= {King, Jeffrey C.},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Zalta, Edward N. and Nodelman, Uri},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Structured Propositions},
+  year		= {2024}
+}
+
+@Book{		  russell2010principles,
+  address	= {London},
+  author	= {Russell, Bertrand},
+  publisher	= {Routledge},
+  title		= {Principles of Mathematics},
+  year		= {2010}
+}
+
+@Article{	  pylkkanen2007meg,
+  author	= {Pylkk{\"a}nen, Liina and McElree, Brian},
+  journal	= {Journal of Cognitive Neuroscience},
+  number	= {11},
+  pages		= {1905--1921},
+  title		= {An {MEG} Study of Silent Meaning},
+  volume	= {19},
+  year		= {2007}
+}
+
+@Article{	  pylkkanen2006representation,
+  author	= {Pylkk{\"a}nen, Liina and Llin\'as, Rodolfo and Murphy,
+		  Gregory L.},
+  journal	= {Journal of Cognitive Neuroscience},
+  number	= {1},
+  pages		= {97--109},
+  title		= {The Representation of Polysemy: {MEG} Evidence},
+  volume	= {18},
+  year		= {2006}
+}
+
+@Book{		  portner2002formal,
+  editor	= {Portner, Paul H and Partee, Barbara H},
+  publisher	= {Blackwell Publishers},
+  title		= {Formal Semantics: The Essential Readings},
+  year		= {2002}
+}
+
+@Article{	  wigner1960unreasonable,
+  author	= {Wigner, Eugene P.},
+  journal	= {Communications on Pure and Applied Mathematics},
+  number	= {1},
+  pages		= {1--14},
+  title		= {The Unreasonable Effectiveness of Mathematics in the
+		  Natural Sciences},
+  volume	= {13},
+  year		= {1960}
+}
+
+@PhDThesis{	  koss2025present,
+  author	= {Koss, Tom},
+  school	= {Universiteit Antwerpen},
+  title		= {The Present Perfective Paradox},
+  year		= {2025}
+}
+
 @Article{	  forbes2025improve,
   author	= {Forbes, Samuel H. and Guest, Olivia},
   journal	= {Cognitive Science},
