--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@Article{	  fenger2025matching,
+  author	= {Fenger, Paula and Weisser, Philipp},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Matching Domains: The Syntax, Morphology, and Phonology of
+		  the Verb in Sinhala},
+  year		= {2025}
+}
+
+@Article{	  mizuno2025structures,
+  author	= {Mizuno, Teruyuki},
+  journal	= {Linguistics and Philosophy},
+  title		= {The Structures and Meanings of Might-Counterfactuals: A
+		  View from Japanese},
+  year		= {2025}
+}
+
+@Article{	  winter2025projection,
+  author	= {Winter, Yoad},
+  journal	= {Linguistics and Philosophy},
+  title		= {Projection or Admittance? Presupposition Accommodation and
+		  the Karttunen Calculus},
+  year		= {2025}
+}
+
+@Article{	  erlewine2025focus,
+  author	= {Erlewine, Michael Yoshitaka},
+  journal	= {Linguistics and Philosophy},
+  title		= {Focus Intervention, Multiple Association, and the Unity of
+		  Focus and Wh Alternatives},
+  year		= {2025}
+}
+
+@Article{	  stoljar2024why,
+  author	= {Stoljar, Daniel and \noopsortzhangand Zhang, Zhihe
+		  Vincent},
+  journal	= {Inquiry},
+  number	= {0},
+  pages		= {1--29},
+  title		= {Why ChatGPT Doesn't Think: An Argument from Rationality},
+  volume	= {0},
+  year		= {2024}
+}
+
 @Book{		  elbourne2011meaning,
   address	= {Boston, MA ; New York, NY},
   author	= {Elbourne, Paul D.},
