--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Article{	  lucking2025exceptions,
+  author	= {L{\"u}cking, Andy and Ginzburg, Jonathan},
+  journal	= {Linguistics and Philosophy},
+  title		= {Exceptions from Rules and Noteworthy Exceptions: The
+		  Balance Scale for Making Exceptions},
+  year		= {2025}
+}
+
+@Book{		  mckay2006plural,
+  address	= {Oxford},
+  author	= {McKay, Thomas J.},
+  publisher	= {Clarendon},
+  title		= {Plural Predication},
+  year		= {2006}
+}
+
+@Article{	  bar-lev2025homogeneity,
+  author	= {Bar-Lev, Moshe E},
+  journal	= {Journal of Semantics},
+  title		= {Homogeneity, Underspecification, and Ambiguity in Plural
+		  Predication},
+  year		= {2025}
+}
+
 @Article{	  fenger2025matching,
   author	= {Fenger, Paula and Weisser, Philipp},
   journal	= {Natural Language and Linguistic Theory},
