--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  ruvalcaba2025tener,
+  author	= {Ruvalcaba, Christian},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Tener and Traer: Verbs of Possession in Spanish},
+  volume	= {10},
+  year		= {2025}
+}
+
 @Article{	  lucking2025exceptions,
   author	= {L{\"u}cking, Andy and Ginzburg, Jonathan},
   journal	= {Linguistics and Philosophy},
