--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  toquero-perez2025accommodating,
+  author	= {Toquero-P{\'e}rez, Luis Miguel},
+  journal	= {Journal of Semantics},
+  pages		= {ffaf004},
+  title		= {Accommodating Number Neutrality in Alasha Mongolian:
+		  Markedness and Semantic Interpretation},
+  year		= {2025}
+}
+
+@Article{	  bylinina2020plurality,
+  author	= {Bylinina, Lisa and Podobryaev, Alexander},
+  journal	= {Journal of Semantics},
+  number	= {1},
+  pages		= {117--128},
+  title		= {Plurality in Buriat and Structurally Constrained
+		  Alternatives},
+  volume	= {37},
+  year		= {2020}
+}
+
 @Article{	  ruvalcaba2025tener,
   author	= {Ruvalcaba, Christian},
   journal	= {Glossa: a journal of general linguistics},
