--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,49 @@
 
+@Article{	  sprouse2022gender,
+  author	= {Sprouse, Jon and Messick, Troy and Bobaljik, Jonathan
+		  David},
+  journal	= {Journal of Linguistics},
+  number	= {2},
+  pages		= {345--379},
+  title		= {Gender Asymmetries in Ellipsis: An Experimental Comparison
+		  of Markedness and Frequency Accounts in English},
+  volume	= {58},
+  year		= {2022}
+}
+
+@Article{	  levy2024science,
+  author	= {Levy, Roger and Kim, Yoon and Fox, Danny},
+  journal	= {An MIT Exploration of Generative AI},
+  title		= {The Science of Language in the Era of Generative {AI}},
+  year		= {2025}
+}
+
+@Article{	  wiltschko2025grammar,
+  author	= {Wiltschko, Martina},
+  journal	= {Theoretical Linguistics},
+  title		= {The Grammar of Self-Talk. What Different Modes of Talking
+		  Reveal about Language},
+  year		= {2025}
+}
+
+@Article{	  fox2024large,
+  author	= {Fox, Danny and Katzir, Roni},
+  journal	= {Theoretical Linguistics},
+  number	= {1--2},
+  pages		= {71--76},
+  title		= {Large Language Models and Theoretical Linguistics},
+  volume	= {50},
+  year		= {2024}
+}
+
+@PhDThesis{	  martinez2021acceptability,
+  author	= {V{\'a}zquez Mart{\'i}nez, H{\'e}ctor Javier},
+  school	= {Massachusetts Institute of Technology},
+  title		= {The Acceptability Delta Criterion: Memorization Is Not
+		  Enough},
+  year		= {2021}
+}
+
 @Article{	  toquero-perez2025accommodating,
   author	= {Toquero-P{\'e}rez, Luis Miguel},
   journal	= {Journal of Semantics},
