--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,59 @@
 
+@Article{	  haslinger2025unified,
+  author	= {Haslinger, Nina and Hien, Alain Noindonmon and Rosina,
+		  Emil Eva and Schmitt, Viola and Wurm, Valerie},
+  journal	= {Natural Language \\& Linguistic Theory},
+  title		= {A Unified Semantics for Distributive and Non-Distributive
+		  Universal Quantifiers across Languages},
+  year		= {2025}
+}
+
+@Article{	  hanink2025variation,
+  author	= {Hanink, Emily A. and Koontz-Garboden, Andrew},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Variation in the Lexical Semantics of Property Concept
+		  Roots: Evidence from W\'a$\cdot$\v siw},
+  year		= {2025}
+}
+
+@InBook{	  iatridou2021grammar,
+  address	= {Oxford, New York},
+  author	= {Iatridou, Sabine},
+  booktitle	= {Conditionals, Paradox, and Probability: Themes from the
+		  Philosophy of Dorothy Edgington},
+  editor	= {Walters, Lee and Hawthorne, John},
+  publisher	= {Oxford University Press},
+  title		= {Grammar Matters},
+  year		= {2021}
+}
+
+@Book{		  walters2021conditionals,
+  address	= {Oxford, New York},
+  editor	= {Walters, Lee and Hawthorne, John P.},
+  publisher	= {Oxford University press},
+  title		= {Conditionals, Paradox, and Probability: Themes from the
+		  Philosophy of Dorothy Edgington},
+  year		= {2021}
+}
+
+@Article{	  izvorski1996syntax,
+  author	= {Izvorski, Roumyana},
+  journal	= {North East Linguistics Society},
+  title		= {The Syntax and Semantics of Correlative Proforms},
+  volume	= {26},
+  year		= {1996}
+}
+
+@Book{		  marquetagracia2023reflexion,
+  address	= {Zaragoza},
+  author	= {Marqueta, B{\'a}rbara},
+  publisher	= {Prensas de la Universidad de Zaragoza},
+  title		= {La reflexi{\'o}n sint{\'a}ctica: teor{\'i}a y pr{\'a}ctica
+		  para la docencia},
+  volume	= {(324)},
+  year		= {2023}
+}
+
 @Article{	  sprouse2022gender,
   author	= {Sprouse, Jon and Messick, Troy and Bobaljik, Jonathan
 		  David},
