--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,90 @@
 
+@Article{	  hayes2025zeroweighted,
+  author	= {Hayes, Bruce and Kaplan, Aaron},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {605--618},
+  title		= {Zero-Weighted Constraints In Noisy Harmonic Grammar},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  bruening2025selectional,
+  author	= {Bruening, Benjamin},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {439--483},
+  title		= {Selectional Violations in Coordination: A Response to
+		  Patejuk and Przepi{\'o}rkowski 2023},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  hsieh2025locality,
+  author	= {Hsieh, Henrison},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {519--560},
+  title		= {Locality in Exceptional Tagalog A-bar-Extraction},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  dell2025incongruent,
+  author	= {Dell, Fran{\c c}ois and Benini, Romain},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {485--518},
+  title		= {Incongruent Enjambments: The Case of Classical French
+		  Verse},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  matsumoto2025contiguity,
+  author	= {Matsumoto, Daiki},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {561--588},
+  title		= {Contiguity Theory and the Ordering of Contrastive
+		  Elements},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  bar-lev2025communicative,
+  author	= {Bar-Lev, Moshe E. and Katzir, Roni},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {415--437},
+  title		= {Communicative Stability and the Typology of Logical
+		  Operators},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  miyagawa2025commitment,
+  author	= {Miyagawa, Shigeru and Hill, Virginia},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {589--604},
+  title		= {Commitment Phrase: Linking Proposition to Illocutionary
+		  Force},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  sato2024when,
+  author	= {Sato, Yosuke},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {619--630},
+  title		= {When {VP}-Ellipsis and Sluicing Conspire against Syntactic
+		  Neg-Raising},
+  volume	= {56},
+  year		= {2024}
+}
+
 @Article{	  haslinger2025unified,
   author	= {Haslinger, Nina and Hien, Alain Noindonmon and Rosina,
 		  Emil Eva and Schmitt, Viola and Wurm, Valerie},
