--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  green2007selfexpression,
+  address	= {Oxford},
+  author	= {Green, Mitchell S.},
+  publisher	= {Oxford University Press},
+  title		= {Self-Expression},
+  year		= {2007},
+  doi		= {10.1093/acprof:oso/9780199283781.001.0001}
+}
+
 @Article{	  hayes2025zeroweighted,
   author	= {Hayes, Bruce and Kaplan, Aaron},
   journal	= {Linguistic Inquiry},
