--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,37 @@
 
+@Article{	  colasanti2025demonstratives,
+  author	= {Colasanti, Valentina and Wiltschko, Martina},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Demonstratives Locate Referents in Common Space and
+		  Ground: A Comparative Syntactic Approach},
+  year		= {2025}
+}
+
+@Article{	  taghipour2025agreeing,
+  author	= {Taghipour, Sahar and Kahnemuyipour, Arsalan},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Agreeing against the Odds: When Clitic Clusters Trigger
+		  Agreement},
+  year		= {2025}
+}
+
+@Article{	  beck2025evidence,
+  author	= {Beck, Sigrid},
+  journal	= {Natural Language Semantics},
+  title		= {Evidence for a Generalized Quantifier Semantics in the
+		  Interpretation of German Weak Personal Pronouns---a
+		  Response to Elbourne (2021)},
+  year		= {2025}
+}
+
+@Book{		  hinzen2006mind,
+  address	= {Oxford ; New York},
+  author	= {Hinzen, Wolfram},
+  publisher	= {Oxford University Press},
+  title		= {Mind Design and Minimal Syntax},
+  year		= {2006}
+}
+
 @Book{		  green2007selfexpression,
   address	= {Oxford},
   author	= {Green, Mitchell S.},
