--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,76 @@
 
+@Article{	  hopperdietzel2025marked,
+  author	= {Hopperdietzel, Jens and Alexiadou, Artemis},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Marked Unergatives: Syntactic Ergativity and
+		  Nominalizations},
+  year		= {2025}
+}
+
+@Book{		  gallego2024pares,
+  author	= {Gallego, {\'A}ngel J.},
+  title		= {Pares M{\'i}nimos 2024-2025},
+  year		= {2024}
+}
+
+@Book{		  alammar2024handson,
+  address	= {Beijing Boston Farnham},
+  author	= {Alammar, Jay and Grootendorst, Maarten},
+  publisher	= {O'Reilly},
+  title		= {Hands-on Large Language Models: Language Understanding and
+		  Generation},
+  year		= {2024}
+}
+
+@Book{		  gallego2024analisis,
+  author	= {Gallego, {\'A}ngel J.},
+  title		= {An{\'a}lisis Inverso. Ejercicios de Gram{\'a}tica},
+  year		= {2024}
+}
+
+@Book{		  epstein2021minimalist,
+  address	= {New York},
+  author	= {Epstein, Samuel D. and Kitahara, Hisatsugu and Seely, T.
+		  Daniel},
+  publisher	= {Routledge},
+  title		= {A Minimalist Theory of Simplest Merge},
+  year		= {2021}
+}
+
+@Book{		  pesetsky2013russian,
+  address	= {Cambridge (Mass.)},
+  author	= {Pesetsky, David},
+  publisher	= {The MIT press},
+  title		= {Russian Case Morphology and the Syntactic Categories},
+  volume	= {(66)},
+  year		= {2013}
+}
+
+@Book{		  elbourne2005situations,
+  address	= {Cambridge, Mass.},
+  author	= {Elbourne, Paul D.},
+  publisher	= {MIT Press},
+  title		= {Situations and Individuals},
+  volume	= {(41)},
+  year		= {2005}
+}
+
+@Book{		  pesetsky2000phrasala,
+  author	= {Pesetsky, David},
+  publisher	= {The MIT Press},
+  title		= {Phrasal Movement and Its Kin},
+  year		= {2000}
+}
+
+@Book{		  pesetsky1995zeroa,
+  address	= {Cambridge, Mass},
+  author	= {Pesetsky, David},
+  publisher	= {MIT Press},
+  title		= {Zero Syntax: Experiencers and Cascades},
+  volume	= {(27)},
+  year		= {1995}
+}
+
 @Article{	  colasanti2025demonstratives,
   author	= {Colasanti, Valentina and Wiltschko, Martina},
   journal	= {Natural Language and Linguistic Theory},
