--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,17 @@
 
+@Article{	  vela-plo2025there,
+  author	= {Vela-Plo, Laura and De Pedis, Marta and Ortega-Andr{\'e}s,
+		  Marina},
+  journal	= {Languages},
+  number	= {7},
+  pages		= {175},
+  title		= {Is There a Woman in Los Candidatos? Gender Perception with
+		  Masculine ''Generics and Gender-Fair Language Strategies in
+		  Spanish},
+  volume	= {10},
+  year		= {2025}
+}
+
 @Article{	  hopperdietzel2025marked,
   author	= {Hopperdietzel, Jens and Alexiadou, Artemis},
   journal	= {Natural Language and Linguistic Theory},
