--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@Article{	  marantz1997no,
+  author	= {Marantz, Alec},
+  journal	= {University of Pennsylvania Working Papers in Linguistics},
+  number	= {2},
+  title		= {No {{Escape}} from {{Syntax}}: {{Don}}'t {{Try
+		  Morphological Analysis}} in the {{Privacy}} of {{Your Own
+		  Lexicon}}},
+  volume	= {4},
+  year		= {1997}
+}
+
+@Article{	  royer2025correlates,
+  author	= {Royer, Justin and Coon, Jessica},
+  journal	= {Language and Linguistics Compass},
+  number	= {4},
+  pages		= {e70013},
+  title		= {Correlates of {{Object Raising}} in {{Mayan}}},
+  volume	= {19},
+  year		= {2025},
+  doi		= {10.1111/lnc3.70013}
+}
+
 @Article{	  vela-plo2025there,
   author	= {Vela-Plo, Laura and De Pedis, Marta and Ortega-Andr{\'e}s,
 		  Marina},
